syntax = "proto3";

package starknet.mock;

import "malachite.common.proto";
import "google/protobuf/any.proto";

message Vote {
    malachite.common.VoteType vote_type = 1;
    malachite.common.Height height = 2;
    malachite.common.Round round = 3;
    malachite.common.ValueId value = 4;
    malachite.common.Address validator_address = 5;
}

message Proposal {
    malachite.common.Height height = 1;
    malachite.common.Round round = 2;
    malachite.common.Value value = 3;
    malachite.common.Round pol_round = 4;
    malachite.common.Address validator_address = 5;
}

message BlockPart {
    malachite.common.Height height = 1;
    malachite.common.Round round = 2;
    uint64 sequence = 3;
    malachite.common.Address validator_address = 4;
    google.protobuf.Any content = 5;
}

message Transaction {
    optional bytes value = 1;
}

message TransactionBatch {
    repeated Transaction transactions = 1;
}


message BlockMetadata {
    bytes proof = 1;
    Hash hash = 2;
}

message ProposalContent {
    BlockMetadata metadata = 2;
}

message ProposalPart {
    uint64 sequence = 1;
    oneof part {
        TransactionBatch tx_batch = 2;
        BlockMetadata metadata = 3;
    }
}

message Hash {
    bytes hash = 1;
}
